--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ datasets = "^2.18.0"
 tiktoken = "^0.6.0"
 wandb = "^0.16.4"
 tqdm = "^4.66.2"
+tensorboard = "^2.16.2"
 
 
 [tool.poetry.group.dev.dependencies]
