--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tiktoken = "^0.6.0"
 wandb = "^0.16.4"
 tqdm = "^4.66.2"
 tensorboard = "^2.16.2"
+pydantic = "^2.6.4"
 
 
 [tool.poetry.group.dev.dependencies]
